Front: Start implementing login page

--- a/rts-front/index.html
+++ b/rts-front/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-</head>
-<body>
-</body>
+	<head>
+		<meta charset="utf-8"/>
+		<title>RTS M2 Rust</title>
+	</head>
+	<body>
+	</body>
 </html>
